--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,19 @@
     <string name="app_name">Locator</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="save_button">Save</string>
+    <string name="set_male_button">I am Male (M)</string>
+    <string name="set_female_button">I am Female (F)</string>
     <string name="title_activity_maps">Map</string>
     <string name="cannot_locate">Cannot locate</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="not_specified">Not Specified</string>
+    <string name="set_ns_button">Not Specified</string>
+    <string name="locator_title">Locator</string>
+    <string name="title_activity_map_with_filter">MapWithFilterActivity</string>
+    <string name="title_activity_maps_activity2">Map</string>
+    <string name="male_checkbox">Male (M)</string>
+    <string name="female_checkbox">Female(F)</string>
+    <string name="ns_checkbox">Not Specified</string>
 
 </resources>
